# bmi-example-pynetlogo

./: MANIFEST.in  README.md  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: format.yml  test.yml
examples/: README.md  helpers.py  run-bmi-model.ipynb  run-model.ipynb
heat/: __init__.py  bmi_heatdiffusion.py
tests/: test_get_value.py  test_grids.py  test_irf.py  test_model_info.py  test_set_value.py  test_time.py  test_vars.py
